# wave_identify

./: README.md  pyproject.toml  wave_identify.py
data/: uvz850_cfan_ecmwf_2025-11-01_f00.nc  uvz850_cfan_ecmwf_2025-11-01_f12.nc  uvz850_cfan_ecmwf_2025-11-02_f00.nc  uvz850_cfan_ecmwf_2025-11-02_f12.nc  uvz850_cfan_ecmwf_2025-11-03_f00.nc  uvz850_cfan_ecmwf_2025-11-03_f12.nc  uvz850_cfan_ecmwf_2025-11-04_f00.nc  uvz850_cfan_ecmwf_2025-11-04_f12.nc  uvz850_cfan_ecmwf_2025-11-05_f00.nc  uvz850_cfan_ecmwf_2025-11-05_f12.nc  uvz850_cfan_ecmwf_2025-11-06_f00.nc  uvz850_cfan_ecmwf_2025-11-06_f12.nc  uvz850_cfan_ecmwf_2025-11-07_f00.nc  uvz850_cfan_ecmwf_2025-11-07_f12.nc  uvz850_cfan_ecmwf_2025-11-08_f00.nc  uvz850_cfan_ecmwf_2025-11-08_f12.nc  uvz850_cfan_ecmwf_2025-11-09_f00.nc  uvz850_cfan_ecmwf_2025-11-09_f12.nc  uvz850_cfan_ecmwf_2025-11-10_f00.nc  uvz850_cfan_ecmwf_2025-11-10_f12.nc  uvz850_cfan_ecmwf_2025-11-11_f00.nc  uvz850_cfan_ecmwf_2025-11-11_f12.nc  uvz850_cfan_ecmwf_2025-11-12_f00.nc  uvz850_cfan_ecmwf_2025-11-12_f12.nc  uvz850_cfan_ecmwf_2025-11-13_f00.nc  uvz850_cfan_ecmwf_2025-11-13_f12.nc  uvz850_cfan_ecmwf_2025-11-14_f00.nc  uvz850_cfan_ecmwf_2025-11-14_f12.nc  uvz850_cfan_ecmwf_2025-11-15_f00.nc  uvz850_cfan_ecmwf_2025-11-15_f12.nc  uvz850_cfan_ecmwf_2025-11-16_f00.nc  uvz850_cfan_ecmwf_2025-11-16_f12.nc  uvz850_cfan_ecmwf_2025-11-17_f00.nc  uvz850_cfan_ecmwf_2025-11-17_f12.nc  uvz850_cfan_ecmwf_2025-11-18_f00.nc  uvz850_cfan_ecmwf_2025-11-18_f12.nc  uvz850_cfan_ecmwf_2025-11-19_f00.nc  uvz850_cfan_ecmwf_2025-11-19_f12.nc  uvz850_cfan_ecmwf_2025-11-20_f00.nc  (+134 more)
(+3 files in other folders)
