[project]
name = "wave_identify"
version = "0.0.1"
authors = [
  { name="Samantha Ferrett", email="s.j.ferrett@reading.ac.uk" },
]
description = "Wave identification using Yang et al. method"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]